tests/ui/reborrow/coerce-shared-reordered-field.stderr
error: implementing `CoerceShared` does not allow multiple lifetimes or fields to be coerced
  --> $DIR/coerce-shared-reordered-field.rs:21:10
   |
LL | impl<'a> CoerceShared<ReorderRef<'a>> for ReorderMut<'a> {}
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

